--- a/TODO.org
+++ b/TODO.org
@@ -1,6 +1,7 @@
 - [ ] Alpha
   - [ ] Smooth progress report on the first phase of the emote
     rendering (the OpenGL one)
+  - [ ] Replace rendering preview with spining wheel on rendering
   - [ ] When you upload big image it takes up a lot of space on the screen
   - [ ] Click Several "Render" clicks
   - [ ] Rendered GIF has no transparency
