--- a/TODO.org
+++ b/TODO.org
@@ -14,10 +14,12 @@
     - [-] JAM
       - [X] Perfectly looped timing
       - [ ] The headphones and the hand
-    - [ ] Hop
-      - [ ] Perfectly looped timing
-      - [ ] No bumping on the edges
+    - [-] Hop
+      - [X] Perfectly looped timing
+      - [X] No bumping on the edges
       - [ ] Flipping the texture according to the direction
+      - [ ] Going out of bounds of edges
+    - [ ] Bounce
   - [ ] More usable UI layout (does not have to be pretty)
     - [ ] Replace the Lorem with actually useful texts
     - [ ] Add copyright footer
