--- a/TODO.org
+++ b/TODO.org
@@ -1,19 +1,11 @@
 - [-] Alpha
   - [X] Replace rendering preview with spining wheel on rendering
+  - [ ] Get rid of the "Render" buttons
+    - Just rerender every time something changes
+      - With WebAssembly speed it this will be especially nice
   - [ ] When you upload big image it takes up a lot of space on the screen
-  - [ ] Original aspect ratio of the input image is not preserved
-    - I guess it should be solved on the level of the "filters"
-      - So we need to pass the size of the textures to the filters as uniforms
-  - [ ] Make Several "Render" clicks
+  - [ ] Prevent several concurrent render processess
   - [X] Rendered GIF has no transparency
-  - [ ] Special built-in "clean up" filters that are always applied before handing the texture to the preset shaders
-    - Like the one we did to remove weird pixels from Jebaited
-  - [ ] Customize parameters of the GIF rendering
-    - [ ] FPS
-    - [ ] Quality
-    - [ ] Resolution
-    - [ ] Custom transparency color
-    - ...
   - [-] Presets
     - [-] JAM
       - [X] Perfectly looped timing
@@ -35,6 +27,17 @@
     rendering (the OpenGL one)
 - [ ] Beta
   - [ ] Timing of the animation is screwed on blur event
+  - [ ] Customize parameters of the GIF rendering
+    - [ ] FPS
+    - [ ] Quality
+    - [ ] Resolution
+    - [ ] Custom transparency color
+    - ...
+  - [ ] Special built-in "clean up" filters that are always applied before handing the texture to the preset shaders
+    - Like the one we did to remove weird pixels from Jebaited
+  - [ ] Original aspect ratio of the input image is not preserved
+    - I guess it should be solved on the level of the "filters"
+      - So we need to pass the size of the textures to the filters as uniforms
 - [ ] Back-burner
   - [ ] Fork and rewrite gif.js in WebAssembly
     - Also get rid of the old coffee stuff
