--- a/TODO.org
+++ b/TODO.org
@@ -3,9 +3,10 @@
     - [X] ppHopper
     - [X] ppOverheat
     - [X] ppBounce
-    - [ ] ppCircle
+    - [X] ppCircle
     - [ ] ppSlide
     - [ ] ppCorner
+    - [ ] "Rare Parrot"
   - [ ] More usable UI layout (does not have to be pretty)
     - [ ] Logo
       - Use the Logo as the test image (instead of tsodinClown) and as the favicon
