--- a/TODO.org
+++ b/TODO.org
@@ -1,15 +1,13 @@
-- [-] Alpha
-  - [ ] Handle "uploading" incorrect image
+- [ ] Beta
+  - [ ] "Download" button
+  - [ ] Widget elements are too small
   - [ ] Development Server Script
+  - [ ] Handle "uploading" incorrect image
+    - Nothing particularly bad happens when you upload incorrect image
+      it would just look a bit more polished if the website at least
+      tried to handle that case
   - [ ] Logo
     - Use the Logo as the test image (instead of tsodinClown) and as the favicon
-  - [ ] Replace the Lorem with actually useful texts
-  - [ ] Add copyright footer
-  - [ ] Widget elements are too small
-  - [ ] "Download" button
-  - [ ] CONTRIBUTING.md
-  - [ ] Beta distros
-- [ ] Beta
   - [ ] Dark Theme
   - [ ] Timing of the animation is screwed on blur event
   - [ ] Customize parameters of the GIF rendering
