--- a/TODO.org
+++ b/TODO.org
@@ -1,3 +1,6 @@
+- [-] Release
+  - [ ] Add "Hard" Filter
+  - [X] Add support section
 - [ ] Beta
   - [ ] "Download" button
   - [ ] Widget elements are too small
@@ -25,8 +28,6 @@
       - So we need to pass the size of the textures to the filters as uniforms
   - [ ] More filters
     - [ ] 3D cube filter
-    - [ ] Triggered Filter
-      - Just shaking furiosly
 - [ ] Back-burner
   - [ ] Fork and rewrite gif.js in WebAssembly
     - Also get rid of the old coffee stuff
